add markazi font

--- a/web/themes/custom/writerrtl/css/style-rtl.css
+++ b/web/themes/custom/writerrtl/css/style-rtl.css
@@ -177,7 +177,7 @@ html {
 body {
   background-color: #f7f7f7; /* Nearly white */
   color: #292929; /* Nearly black */
-  font-family: 'Merriweather', 'Palatino Linotype', 'Book Antiqua', Palatino,
+  font-family: 'Markazi Text', 'Merriweather', 'Palatino Linotype', 'Book Antiqua', Palatino,
     serif;
 }
 
