add iransans font

--- a/web/themes/custom/writerrtl/css/style-rtl.css
+++ b/web/themes/custom/writerrtl/css/style-rtl.css
@@ -8,6 +8,81 @@
  * - Fantastic typography
  * - Support for code snippets
  */
+@font-face {
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/IRANSansWeb.eot');
+  src: url('../fonts/IRANSansWeb.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/IRANSansWeb.woff2') format('woff2'),
+  url('../fonts/IRANSansWeb.woff') format('woff'),
+  url('../fonts/IRANSansWeb.ttf') format('truetype');
+}
+
+
+@font-face {
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/IRANSansWeb_Medium.eot');
+  src: url('../fonts/IRANSansWeb_Medium.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/IRANSansWeb_Medium.woff2') format('woff2'),
+  url('../fonts/IRANSansWeb_Medium.woff') format('woff'),
+  url('../fonts/IRANSansWeb_Medium.ttf') format('truetype');
+}
+@font-face {
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/IRANSansWeb_Light.eot');
+  src: url('../fonts/IRANSansWeb_Light.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/IRANSansWeb_Light.woff2') format('woff2'),
+  url('../fonts/IRANSansWeb_Light.woff') format('woff'),
+  url('../fonts/IRANSansWeb_Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: 200;
+  src: url('../fonts/IRANSansWeb_UltraLight.eot');
+  src: url('../fonts/IRANSansWeb_UltraLight.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/IRANSansWeb_UltraLight.woff2') format('woff2'),
+  url('../fonts/IRANSansWeb_UltraLight.woff') format('woff'),
+  url('../fonts/IRANSansWeb_UltraLight.ttf') format('truetype');
+}
+@font-face {
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/IRANSansWeb.eot');
+  src: url('../fonts/IRANSansWeb.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/IRANSansWeb.woff2') format('woff2'),
+  url('../fonts/IRANSansWeb.woff') format('woff'),
+  url('../fonts/IRANSansWeb.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: bold;
+  src: url('../fonts/IRANSansWeb_Bold.eot');
+  src: url('../fonts/IRANSansWeb_Bold.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/IRANSansWeb_Bold.woff2') format('woff2'),
+  url('../fonts/IRANSansWeb_Bold.woff') format('woff'),
+  url('../fonts/IRANSansWeb_Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: IRANSans;
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/IRANSansWeb.eot');
+  src: url('../fonts/IRANSansWeb.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/IRANSansWeb.woff2') format('woff2'),
+  url('../fonts/IRANSansWeb.woff') format('woff'),
+  url('../fonts/IRANSansWeb.ttf') format('truetype');
+}
+
 
 /**
  * CSS Reset designed by Eric Meyer
@@ -177,7 +252,7 @@ html {
 body {
   background-color: #f7f7f7; /* Nearly white */
   color: #292929; /* Nearly black */
-  font-family: 'Mirza', 'Merriweather', 'Palatino Linotype', 'Book Antiqua', Palatino,
+  font-family: 'IRANSans', 'Merriweather', 'Palatino Linotype', 'Book Antiqua', Palatino,
     serif;
 }
 
@@ -303,7 +378,7 @@ td {
 
 .messages,
 .error {
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
 }
 
 /**
@@ -320,7 +395,7 @@ input[type='date'],
 input[type='time'],
 input[type='datalist'],
 textarea {
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
   font-size: 0.8em;
   border: 1px solid #ccc;
   padding: 3px 5px;
@@ -328,7 +403,7 @@ textarea {
 .form-submit {
   background: #aaa;
   border: 1px solid #aaa;
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
   font-size: 0.8em;
   font-weight: bold;
   color: white;
@@ -358,7 +433,7 @@ textarea {
   display: none;
 }
 .search-block-form input {
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
   font-size: 0.62em;
 }
 .search-block-form .form-search {
@@ -406,7 +481,7 @@ textarea {
 
 #site-name a {
   color: #888888;
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
   font-size: 1em;
   line-height: 1em;
   text-decoration: none;
@@ -415,7 +490,7 @@ textarea {
 
 #site-slogan {
   color: #888888;
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
   font-size: 0.62em;
   font-weight: normal;
   text-transform: uppercase;
@@ -483,7 +558,7 @@ header nav li {
 header nav a {
   color: #888888;
   display: block;
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
   font-size: 0.62em;
   margin-bottom: 4px;
   padding-bottom: 6px;
@@ -523,7 +598,7 @@ header nav li {
 .writer-date {
   color: #888888;
   display: block;
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
   font-weight: 700;
   right: -190px;
   line-height: 1.2em;
@@ -617,7 +692,7 @@ article.not-page {
 }
 
 .foot-wrap {
-  font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+  font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
   font-size: 0.62em;
   padding-top: 15px;
   text-decoration: none;
@@ -753,7 +828,7 @@ ul.menu a.is-active {
     /* Styles for toggle button */
     color: #888;
     display: block;
-    font-family: 'Mirza', 'Lato', Helvetica, sans-serif;
+    font-family: 'IRANSans', 'Lato', Helvetica, sans-serif;
     font-size: 0.62em;
     font-weight: normal;
     margin: 0 0 -1px;
