add iransans font

--- a/web/themes/custom/writerrtl/css/style-rtl.css
+++ b/web/themes/custom/writerrtl/css/style-rtl.css
@@ -940,6 +940,6 @@ ul.menu a.is-active {
 code {
   border: solid 2px lightgrey;
   border-radius: 4px;
-  direction: ltr;
-  text-align: left;
+  direction: ltr !important;
+  text-align: left !important;
 }
